feat: setup basic table styling

--- a/frontend/styles/variables.scss
+++ b/frontend/styles/variables.scss
@@ -1,1 +1,15 @@
-$color: red;
+// colors
+$white: #fff;
+
+// misc
+$border-radius: 8px;
+
+// fonts
+$fsize-small: 12px;
+$fsize-medium: 14px;
+$fsize-large: 16px;
+
+$fweight-light: 300;
+$fweight-normal: 400;
+$fweight-semibold: 500;
+$fweight-bold: 700;
