--- a/frontend/components/Navbar/styles.module.scss
+++ b/frontend/components/Navbar/styles.module.scss
@@ -1,5 +1,5 @@
-@import "@/styles/variables.scss";
+@use "@/styles/functions.scss" as functions;
 
 .Navbar {
-  padding: 1rem;
+  padding: functions.spacing(1);
 }
