--- a/frontend/components/Table/styles.module.scss
+++ b/frontend/components/Table/styles.module.scss
@@ -1,21 +1,21 @@
-@import "@/styles/functions.scss";
-@import "@/styles/variables.scss";
+@use "@/styles/functions.scss" as functions;
+@use "@/styles/variables.scss" as variables;
 
 .Table {
   background-color: #fff;
-  border-radius: $border-radius;
-  padding: spacing(2);
+  border-radius: variables.$border-radius;
+  padding: functions.spacing(2);
 
   th {
     text-align: initial;
-    font-size: $fsize-medium;
-    font-weight: $fweight-bold;
-    padding: spacing(0.5);
+    font-size: variables.$fsize-medium;
+    font-weight: variables.$fweight-bold;
+    padding: functions.spacing(0.5);
   }
 
   td {
-    font-size: $fsize-large;
-    font-weight: $fweight-semibold;
-    padding: spacing(1.5) spacing(0.5);
+    font-size: variables.$fsize-large;
+    font-weight: variables.$fweight-semibold;
+    padding: functions.spacing(1.5) functions.spacing(0.5);
   }
 }
