--- a/frontend/containers/HomePage/styles.module.scss
+++ b/frontend/containers/HomePage/styles.module.scss
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   padding: functions.spacing(2) functions.spacing(8);
+  gap: functions.spacing(2);
 
   h1 {
     margin: 0;
