--- a/frontend/components/TextInput/styles.module.scss
+++ b/frontend/components/TextInput/styles.module.scss
@@ -6,6 +6,8 @@
   background-color: variables.$light-gray;
   border-radius: variables.$border-radius;
   border: 2px solid variables.$gray;
+  font-size: variables.$fsize-medium;
+  font-weight: variables.$fweight-semibold;
 
   &::placeholder {
     color: variables.$dark-gray;
