--- a/frontend/containers/HomePage/VoteForm/styles.module.scss
+++ b/frontend/containers/HomePage/VoteForm/styles.module.scss
@@ -1,15 +1,23 @@
 @use "@/styles/functions" as functions;
 @use "@/styles/variables" as vars;
 
-.VoteForm {
+.VoteFormContainer {
   display: flex;
   flex-direction: column;
-  gap: functions.spacing(2);
-  padding: functions.spacing(2) functions.spacing(2) functions.spacing(4);
-  background: vars.$white;
   border-radius: vars.$border-radius;
+  background: vars.$white;
+  padding: functions.spacing(2);
+  gap: functions.spacing(2);
+  margin-bottom: functions.spacing(4);
+
+  form {
+    padding-bottom: functions.spacing(2);
+  }
 
   h4 {
+    display: flex;
+    align-items: center;
+    gap: functions.spacing(1);
     margin: 0;
   }
 
