refactor: adjust paddings overall, fix search input widths and add overflow for results table

--- a/frontend/containers/HomePage/SearchSection/styles.module.scss
+++ b/frontend/containers/HomePage/SearchSection/styles.module.scss
@@ -1,5 +1,13 @@
+@use "@/styles/breakpoints" as bpoints;
+
 .SearchSection {
   input {
-    min-width: 417px;
+    min-width: 100%;
+  }
+
+  @include bpoints.media-query(medium) {
+    input {
+      min-width: 417px;
+    }
   }
 }
