--- a/frontend/components/Table/styles.module.scss
+++ b/frontend/components/Table/styles.module.scss
@@ -1,21 +1,28 @@
 @use "@/styles/functions.scss" as functions;
 @use "@/styles/variables.scss" as variables;
 
-.Table {
-  background-color: #fff;
-  border-radius: variables.$border-radius;
-  padding: functions.spacing(2);
+.TableContainer {
+  max-width: 100%;
+  overflow-x: auto;
+  -webkit-overflow-scrolling: touch;
 
-  th {
-    text-align: initial;
-    font-size: variables.$fsize-medium;
-    font-weight: variables.$fweight-bold;
-    padding: functions.spacing(0.5);
-  }
+  .Table {
+    background-color: #fff;
+    border-radius: variables.$border-radius;
+    padding: functions.spacing(2);
+    width: 100%;
 
-  td {
-    font-size: variables.$fsize-large;
-    font-weight: variables.$fweight-semibold;
-    padding: functions.spacing(1.5) functions.spacing(0.5);
+    th {
+      text-align: initial;
+      font-size: variables.$fsize-medium;
+      font-weight: variables.$fweight-bold;
+      padding: functions.spacing(0.5);
+    }
+
+    td {
+      font-size: variables.$fsize-large;
+      font-weight: variables.$fweight-semibold;
+      padding: functions.spacing(1.5) functions.spacing(0.5);
+    }
   }
 }
